styles/hide-player-ui.css
.hide-player-ui.settings-form .form-group {
    margin-bottom: 0.75rem;
}

.hide-player-ui.settings-form .warning-note {
    text-align: center;
    width: 350px;
    margin: 0 auto;
}

.hide-player-ui-hidden {
    display: none !important;
}

.hide-player-ui-logo #logo {
    display: none !important;
}

.hide-player-ui-navigation #navigation {
    display: none !important;
}

.hide-player-ui-navToggle #nav-toggle {
    display: none !important;
}

.hide-player-ui-sceneList #scene-list {
    display: none !important;
}

.hide-player-ui-sceneList .monks-scene-navigation {
    display: none !important;
}

.hide-player-ui-bossBar .bossBar {
    display: none !important;
}

.hide-player-ui-controls #controls {
    display: none !important;
}

.hide-player-ui-sidebar #sidebar {
    display: none !important;
}

.hide-player-ui-chatLog a[data-tab="chat"] {
    display: none !important;
}

.hide-player-ui-combatTracker a[data-tab="combat"] {
    display: none !important;
}

.hide-player-ui-actorsDirectory a[data-tab="actors"] {
    display: none !important;
}

.hide-player-ui-itemsDirectory a[data-tab="items"] {
    display: none !important;
}

.hide-player-ui-journalEntries a[data-tab="journal"] {
    display: none !important;
}

.hide-player-ui-rollableTables a[data-tab="tables"] {
    display: none !important;
}

.hide-player-ui-cardStacks a[data-tab="cards"] {
    display: none !important;
}

.hide-player-ui-audioPlaylists a[data-tab="playlists"] {
    display: none !important;
}

.hide-player-ui-compendiumPacks a[data-tab="compendium"] {
    display: none !important;
}

.hide-player-ui-gameSettings a[data-tab="settings"] {
    display: none !important;
}

.hide-player-ui-players #players {
    display: none !important;
}

.hide-player-ui-hotbar #hotbar {
    display: none !important;
}

.hide-player-ui-player-config .user-config {
    display: none !important;
}

.hide-player-ui-token-hud #token-hud {
    display: none !important;
}

.hide-player-ui-token-action-hud #token-action-hud {
    display: none !important;
}

.hide-token-custom-hotbar #custom-hotbar {
    display: none !important;
}

.hide-token-custom-hotbar #hotbar {
    display: none !important;
}

.hide-player-ui .sub-option-grouping {
    margin-left: 1rem;
    border-left: 1px solid #1c1c1c78;
    padding-left: 0.5rem;
}

.hide-player-ui .notes-second-line {
    margin-top: -0.75rem;
}

.hide-player-ui-dynamic-sized-sidebar #sidebar.collapsed {
    height: auto !important;
}

.hide-player-ui-dynamic-sized-sidebar #sidebar-tabs {
    justify-content: space-evenly;
}

